--- a/jsconfig.json
+++ b/jsconfig.json
@@ -1,8 +1,8 @@
 {
   "compilerOptions": {
-    "baseUrl": ".",
+    "baseUrl": "authjs",
     "paths": {
-      "@/*": ["./*"]
+      "@/*": ["authjs/*"]
     }
   }
 }
